syntax = "proto3";

package calculator;
option go_package="calculator/calculatorpb";


message InputParams {
    int32 firstNumber = 1;
    int32 secondNumber = 2;
}

message CalculatorReq{
    InputParams input = 1;
}

message CalculatorResponse{
    int32 result = 1;
}

message AverageReq{
    int32 inputNum = 1;
}

message AverageResponse{
    double result = 1;
}

service CalculatorService{
    rpc Calculate(CalculatorReq) returns (CalculatorResponse) {};

    rpc Average(stream AverageReq) returns (AverageResponse) {};
}

